[package]
name = "robo2_2_2_2024_a"
version = "0.1.0"
edition = "2021"

[dependencies]
differential_two_wheel_control = { git = "https://github.com/nityc-d-robo/differential_two_wheel_control",rev = "5f5b3b2fd332f74e89f363eb56f17ca5b49f0ebb" }
motor_controller = { git = "https://github.com/nityc-d-robo/motor_controller",rev = "ce467588a86a9971a9c5e9354e373206d4cbd4ad"}
controllers = {git = "https://github.com/nityc-d-robo/controllers",rev = "83c2bfdd368250073e4dbaf3a4ce078a9dac3859"}

safe_drive = "0.4"

[package.metadata.ros]
safe_drive_version = "0.3"
